# experiment_monorepo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Claude.md  README.md  main.py  pyproject.toml
coding_agent_reverse_engineer/: 2026-02-02T21-49-15+00-00_system-explorer_bFYv3EmhmLynmSk2eqEfHG.eval  proxy.py
coding_agent_reverse_engineer/viewer/: README.md  full_tools.json  index.html  prototype_tools.json
coding_agents_playground/: basic.py  dataset.json
simple_backdoors/: sft.py
simple_backdoors/data/: gibberish.jsonl  simplest_backdoor.jsonl
simple_backdoors/data_wrangling/: gibberish_smoltalk.py  simplest_backdoor.py
simple_backdoors/tests/: test_trainer_local.py
