[project]
name = "experiment-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "trl>=0.26.2",
    "datasets>=2.14.0",
    "modal",
    "wandb>=0.24.0",
    "pyright>=1.1.408",
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
]

[tool.pyright]
include = ["simple_backdoors"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []